--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "jenesius-vue-modal": "^1.10.3",
     "sass": "^1.70.0",
     "sass-loader": "^14.0.0",
+    "uuid": "^9.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
     "vue-toast-notification": "3",
